# python-for-data-engineers-grupo-4

./: README.md  pyproject.toml  requiriments.txt
Scripts/: activate  activate.bat  activate.fish  activate.nu
api_src/: database.py  main.py
api_src/api_resources/: __init__.py  request.py  response.py
api_src/routes/articles/: __ieee_api.py  __init__.py  __science_direct_api.py  request_model.py  response_model.py  service.py  utils.py
src/: config.yaml  debug.xlsx  main.ipynb
src/aula_2/data/: ACM.bib  IEEE.bib  ScienceDirect.bib
src/aula_2/guilherme/: _main.ipynb  config.yaml  main.ipynb  operations.py
src/aula_2/guilherme/output/: acm.csv  acm.json  acm.xml  acm.yaml  iee.csv  iee.json  iee.xml,  iee.yaml  science_direct.csv  science_direct.json  science_direct.xml  science_direct.yaml
src/aula_3/data/: acm.json  iee.json
src/aula_3/guilherme/: config.yaml  main.ipynb  operations.py  specific_operations.py
src/aula_3/guilherme/output/: data.json
src/aula_3/guilherme/src/: config.yaml  main.ipynb
src/aula_3/guilherme/src/modules/: config.py  folder_reader.py  operations.py  specific_operations.py
src/modules/: bibtex_reader.py  config.py  ieee_api_handler.py  operations.py  science_direct_api_handler.py  specific_operations.py  sqlite3_loader.py
src/sandbox/: ConfigTeste.ipynb
